<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- Project and version info --> 
	<string name="app_name">BarcodeOverIP</string>
	<string name="app_full_name">BarcodeOverIP Client v1.1</string>
	<string name="app_full_namever">BarcodeOverIP Client v1.1</string>
	<string name="ver_full_name">1.1.0-a1</string>
	<string name="ver_rel_type">a1</string>
	<string name="ver_rel_name">a1</string>
	<string name="ver_full_num">1.1.0-a1</string>
	<string name="ver_base_num">1.1.0</string>
	<string name="app_desc">Use any network-enabled Android device as a wireless barcode scanner for your personal computer</string>
	<string name="copyright">(&#169;)2013 Tyler H. Jones, tylerhuntjones@gmail.com</string>
	<string name="googlecode_site">http://b.thj.me/project</string>
	<string name="project_site">http://boip.tylerjones.me</string>
	<string name="project_donate_site">http://b.thj.me/donate</string>
	<string name="developer_site">http://tylerjones.me</string>
	<string name="author">Tyler H. Jones</string>
	<string name="author_email">tylerhuntjones@gmail.com</string>
	<string name="service_name">BoIP Service</string>
	<string name="findservers_title">Find Servers</string>
	
	<!-- ServerInfoActiviy items -->
	<string name="server_info">Add/Modify Server</string>
	<string name="es_listinfo_label">Saved Servers Browser</string>
	<string name="servername">Server Name</string>
	<string name="serverinfo_save">Save</string>
	<string name="close">Close</string>
    <string name="list_title">BarcodeOverIP - Saved Servers List</string>
    <string name="add_server_title">Add New Server</string>
    <string name="server_settings_title">Server Settings</string>

	<!-- Menus text and info -->
	<string name="mnuRefreshServers_title">Refresh</string>
	<string name="mnuMainAddServer_title">Add Server</string>
	<string name="mnuMainFindServers_title">Find Servers</string>
	<string name="mnuMainAbout_title">About</string>
	<string name="mnuMainDonate_title">Donate</string>
	<string name="mnuESDelete_title">Delete</string>
	<string name="mnuESEdit_title">Edit</string>

	<!-- Messages (Toasts/Msgboxes) text -->
	<string name="about_msg_title">About BarcodeOverIP</string>
	<string name="about_msg_body"><b>BarcodeOverIP Client 1.1.0-a1</b>\n&#169;2013 - Tyler H. Jones - tylerhuntjones@gmail.com\n\nWelcome to BarcodeOverIP Client for Android!\nTo get started you must add a server by pressing \'Menu\' > \'Add Server\'. 
	    Once you have added one or more servers, to scan a barcode,
	    simply touch the desired server on the list and scan away! To edit or remove a server from the list, press and hold the desired server in the list and a menu with some actions will appear.\nnNOW WITH WIDGETS! Don\'t forget that BarcodeOverIP
	    now has homescreen widgets to make scanning a barcode even easier! 
	    \n\n<b>*NOTE: BoIP Client v1.x will ONLY work with BoIP Server v1.x! If you are sill using an older server, you must update the server app to v1.x!</b> The converse is also true, BoIP-Server v1.x doesn\'t work with older client versions.\n\n
	    The server application is available on Google Code project website.\n\n
	    BoIP on Google Code - http://boip.tylerjones.me\n
	    Bug Reporting  - http://boip.tylerjones.me/bugs\n
	    <b>Support Open Source Apps! Donate!</b>\n -- http://boip.tylerjones.me/donate\n
	</string>	
	<string name="editservers_msg_title">Edit Servers</string>
	<string name="editservers_msg_body">Edit servers activity is not done yet! Try again later!</string>
	<string name="addserver_msg_body">Enter the new server\'s details and click \'Save Server\' or press the back button to continue.</string>
	<string name="addserver_msg_title">Add New Server</string>
	<string name="editserver_msg_body">Change the desired values then click \'Save Server\' or press the back button to continue.</string>
	<string name="editserver_msg_title">Edit Server Info</string>
	<string name="deleteserver_msg_body">Are you sure you want to delete the selected server and all it\'s configuration data?</string>
	<string name="deleteserver_msg_title">Confirm Server Deletion</string>
	<string name="nameexists_msg_body">The given server nickname already exists in the defined servers list!\nDuplicate server nicknames are not allowed in the defined servers list\n\nWould you like to fix this conflict? If so, press \'Yes\', otherwise pressing \'No\' will cancel the server configuration and leave all settings untouched.</string>
	<string name="nameexists_msg_title">Duplicate Server Nickname!</string>
	<string name="hostexists_msg_body">The given hostname/IP already exists in the defined servers list!\nDuplicate hostname/IP values are not allowed in the defined servers list\n\nWould you like to fix this conflict? If so, press \'Yes\', otherwise pressing \'No\' will cancel the server configuration and leave all settings untouched.</string>
	<string name="hostexists_msg_title">Duplicate Hostname/IP!</string>
	<string name="invalidport_msg_title">Invalid Port Number Given!</string>
	<string name="invalidportrange_msg_body">The given port does not fall within the range of valid port numbers\nValid Range: Between 1 &#8211; 65535</string>
	<string name="invalidportvar_msg_body">The given port is not a valid integer data type!</string>
	<string name="settings_save_error">Server Settings Save ERROR! (Error -4)</string>	
	<string name="settings_not_saved">No Server Settings Modified!</string>	
	<string name="settings_saved">Server Settings Saved!</string>
	<string name="server_deleted">Server Deleted!</string>
	<string name="server_not_deleted">Server Delete ERROR!</string>
	<string name="no_hostname_given">No hostname or IP given; it is required!</string>
    <string name="no_nickname_given">No nickname given; it is required!</string>
	<string name="server_settings">Edit Server Settings</string>
	<string name="barcode_sent_ok">Barcode successfully sent to server!</string>
	<string name="hmm_try_again">Hmm, that was strange#8230; Try again. (1)</string>
	<!-- BarcodeScannerActivity Error Messages w/Codes -->
	<string name="invalid_host_ip_neg1">Invalid Host/IP Address! (-1)</string>
	<string name="unreachable_ip_neg2">Invalid IP Address! IP must point to a physical, reachable computer!  (-2)</string>
	<string name="conn_timeout_neg3">Address/Hosst is unreachable! (2500ms Timeout) (-3)</string>
	<string name="conn_err_neg4">Address/Host is unreachable! (Error Connecting) (-4)</string>
	
	
	<!-- DiscoverServersActivity items -->
	<string name="DSA_title">Find Active BoIP Servers</string>
	<string name="DSA_tvTitle">Discover BoIP Servers</string>
	<string name="DSA_tvFound">Found Active Servers (Port 41788):</string>
	<string name="DefaultPort">41788</string>

	<string name="app_icon_desc">BarcodeOverIP Icon</string>
	<string name="main_no_items">No Servers Defined! Press the \'Menu\' button and add one.</string>

	<string-array name="cmenu_serverlist">
		<item>Edit</item>
		<item>Remove</item>
	</string-array>

	<!-- Widget text and hints -->
	<string name="txtname_hint">(Unique Nickname)</string>
	<string name="txthost_hint">(Unique IP)</string>
	<string name="txtport_hint">41788 (Default)</string> 
	<string name="txtpass_hint">NONE (Default)</string>
	<string name="txtname_label">Nickname (Required):</string>
	<string name="txthost_label">IP Address(Required):</string>
	<string name="txtport_label">Port:</string>
	<string name="txtpass_label">Password:</string>
	<string name="btndone_label">Done</string>
	<string name="spinnerServers_label">Servers List:</string>
	<string name="widgetconfig_title">Pick Target Server for Widget</string>
	<string name="btnwidgetok_label">OK</string>
	<string name="btnWidgetScan_label">Scan Barcode</string>
	
	<string-array name="cboServers_array">
		<item>Choose Server</item>
	</string-array>
	
	<string name="widget_lblServer">[Target Server]</string>
	<string name="widget_lblMain">Scan barcode to server:</string>
	<string name="scanner_activity">Scan Barcode w/ZXing</string>
	<string name="widget_picIcon">BarcodeOverIP application icon.</string>
	<string name="widget_config_title">Pick a target for the widget to use.</string>
	<string name="widget_label">BarcodeOverIP Scan Barcode</string>
	<string name="widget_icon_desc">[Not Configured]</string>
	<string name="widget_server_default">[Not Configured]</string>
</resources>