<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent" >
	
		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:paddingTop="5dp"
		    android:text="@string/widgetconfig_title"
		    android:textSize="16sp"
		    android:textStyle="bold" />

		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="8dp"
		    android:text="@string/spinnerServers_label" />

		<Spinner
		    android:id="@+id/spinnerServers"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" />

		<Button
		    android:id="@+id/btnWidgetOK"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/btnwidgetok_label" />

</LinearLayout>